# Sudoku-Haskell

./: sudoku.cabal
.stack-work/: stack.sqlite3
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Main.hs  Sudoku.hs  Testes.hs
