cabal-version:       2.2

name:                sudoku
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Arthur-Sena/Sudoku-Haskell
license:             BSD-3-Clause
license-file:        LICENSE
author:              Arthur Sena
maintainer:          asassena@yahoo.com
copyright:           2024 Arthur Sena
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable sudoku
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , random
                       , containers
                       , QuickCheck >=2.14
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
  other-modules:  Tipos
                  , Validacao
                  , Sudoku
                  , Testes
                  
test-suite sudoku-tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    src
  main-is:           Testes.hs
  build-depends:     base >=4.7 && <5
                     , random
                     , containers
                     , QuickCheck >= 2.14
  other-modules:    Tipos
                    , Validacao
  default-language:  Haskell2010
